# DIRI

./: .gitignore  AGENTS.md  CLAUDE.md  DIRI_INTENT.md  GEMINI.md  LICENSE  README.md  pyproject.toml
.cursor/rules/: diri.mdc
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.windsurf/rules/: diri.md
diri/: cli.py  config.py  constants.py
diri/confidence/: internal_diri.py  self_score.py  trust_levels.py
diri/core/: errors.py  levels.py  models.py  scoring.py
diri/evaluator/: evidence_collector.py  gap_analyzer.py  intent_alignment.py  metric_evaluator.py  project_evaluator.py  report_experience.py  spec_capabilities.py
diri/intent/: hidden_intent.py  intent_confidence.py  intent_discovery.py  preference_memory.py
diri/llm/: anthropic_provider.py  claude_code_provider.py  factory.py  mock_provider.py  openai_provider.py  prompts.py  provider.py
diri/operator/: adapters.py  packet_builder.py  protocol.py
diri/planner/: priority_engine.py  recommendation_engine.py  todo_generator.py
diri/report/: console_report.py  json_report.py  markdown_report.py
diri/result_model/: acceptance_criteria.py  builder.py  validators.py
diri/scanner/: code_summarizer.py  file_collector.py  language_detector.py  project_scanner.py
diri/storage/: history.py  json_store.py  workspace.py
docs/: VISION.md
examples/: sample_intent.md
examples/sample_project/: README.md  app.py
examples/sample_project/templates/: dashboard.html
scripts/: install-cli.ps1  install-cli.sh
tests/: test_behavioral_reproduction.py  test_claude_code_provider.py  test_cli_compare.py  test_cli_defaults.py  test_intent_alignment.py  test_intent_discovery.py  test_intent_llm.py  test_internal_diri.py  test_levels.py  test_llm_factory.py  test_metric_coverage.py  test_no_perfect_score.py  test_operator_bridge.py  test_report_experience.py  test_scoring.py  test_spec_capabilities.py  test_todo_generator.py  test_workspace.py
