[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diri"
version = "0.1.0"
description = "Developer Intent Reproduction Index CLI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "sonofthenation" },
]
keywords = ["code-review", "developer-intent", "static-analysis", "ai-coding", "llm"]
dependencies = [
    "pydantic>=2.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
diri = "diri.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
