[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diri"
version = "0.1.0"
description = "Developer Intent Reproduction Index CLI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "sonofthenation" },
]
keywords = ["code-review", "developer-intent", "static-analysis", "ai-coding", "llm"]
dependencies = [
    "pydantic>=2.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
diri = "diri.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# Soft baseline: keep CI green now; tighten (disallow-untyped-defs, strict) later.
check_untyped_defs = true
